import * as React from 'react';

export function Demo1() {
    return (
        <stackLayout>
            <label>The version is:</label>
        </stackLayout>
    );
}
