import * as React from 'react';

export function Demo2() {
    return (
        <stackLayout>
            <label text={'This is the second demo...'} />
        </stackLayout>
    );
}
